--- a/introduction-to-numpy.ipynb
+++ b/introduction-to-numpy.ipynb
@@ -13,11 +13,11 @@
       "cell_type": "code",
       "execution_count": 2,
       "metadata": {
-        "id": "DnKbpAEaaRGT",
-        "outputId": "f7023779-5e73-42ed-8888-6a577d7f2e0d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "DnKbpAEaaRGT",
+        "outputId": "f7023779-5e73-42ed-8888-6a577d7f2e0d"
       },
       "outputs": [
         {
@@ -144,13 +144,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 2,
       "metadata": {
-        "id": "4xwACl_OaRGV",
-        "outputId": "92dc8811-0448-40c3-d32f-8dd6356e88ad",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "4xwACl_OaRGV",
+        "outputId": "8e11c04c-6eb6-4bf6-c9b8-1bac9071726f"
       },
       "outputs": [
         {
@@ -181,7 +181,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 3,
       "metadata": {
         "id": "x8kMGZjNaRGW"
       },
@@ -206,26 +206,26 @@
     {
       "cell_type": "code",
       "source": [
-        "a3.size"
+        "a3.size, a1.ndim"
       ],
       "metadata": {
-        "id": "49s0NL5Lxjbm",
-        "outputId": "4fb50048-10e4-4a64-b019-952093045f84",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "49s0NL5Lxjbm",
+        "outputId": "f364d74c-5330-466f-fd85-699dcfece6b2"
       },
-      "execution_count": 6,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "18"
+              "(18, 1)"
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 4
         }
       ]
     },
@@ -406,12 +406,12 @@
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {
-        "id": "FUeGTzdcaRGY",
-        "outputId": "991d22ae-05df-4317-c15b-924a9ec12e36",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 232
-        }
+        },
+        "id": "FUeGTzdcaRGY",
+        "outputId": "991d22ae-05df-4317-c15b-924a9ec12e36"
       },
       "outputs": [
         {
