--- a/introduction-to-numpy.ipynb
+++ b/introduction-to-numpy.ipynb
@@ -11,7 +11,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -144,7 +144,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -181,7 +181,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "x8kMGZjNaRGW"
       },
@@ -206,7 +206,7 @@
     {
       "cell_type": "code",
       "source": [
-        "a3.size, a1.ndim"
+        "a3.size, a1.ndim, a2.ndim"
       ],
       "metadata": {
         "colab": {
@@ -215,7 +215,7 @@
         "id": "49s0NL5Lxjbm",
         "outputId": "f364d74c-5330-466f-fd85-699dcfece6b2"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -404,7 +404,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
